[#805] Name collisions: Refactor NodeInfos and TCKUtil